# AI-Class

./: .env.example  README.md
ai_class/: __init__.py  gemini.py  http_server.py  main.py  models.py  rate_limit.py  repository.py  security.py  settings.py  telemetry.py
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/db/: base.py  session.py
backend/app/models/: note.py  note_chunk.py  note_tag.py  tag.py
backend/app/routes/: health.py  notes.py  query.py
backend/app/services/: __init__.py  llm_service.py  retrieval_service.py  tagging_service.py
frontend/: README.md
infra/: docker-compose.yml
tests/: test_domain.py  test_http_server.py  test_integration_api.py  test_security_and_limits.py
