[project]
name = "ai-class-backend"
version = "0.1.0"
description = "Backend service for note ingestion, tagging, and retrieval"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "psycopg[binary]>=3.2.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
